--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
     <li>Castañeda Carrasco Luisa Valentina</li>
     <li>Rufino Lopez Maria Elena </li>
 </ul>
+<div>
+    <ul>
+        <li> git add .</li>
+        <li>git commit -m</li>
+        <li>git push</li>
+    </ul>
+</div>
 </body>
 </html>
