--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li>Alquicira Peña Luis Enrique </li>
     <li>Castañeda Carrasco Luisa Valentina</li>
     <li>Rufino Lopez Maria Elena </li>
+    <li>Zuñiga Sanchez Sebastian</li>
 </ul>
 <div>
     <ul>
